# keyhunter

./: .gitignore  AGENTS.md  Cargo.toml
crates/keyhunter-cli/: Cargo.toml
crates/keyhunter-cli/src/: main.rs
crates/keyhunter-core/: Cargo.toml
crates/keyhunter-core/src/: detectors.rs  engine_bytes.rs  engine_utf8.rs  findings.rs  lib.rs  options.rs  prefilter.rs  rules.rs  scan.rs  types.rs
docs/: DESIGN.compile-and-match.md  PLAN.md  PROGRESS.md
rules/: default.toml
