[package]
name = "keyhunter-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
walkdir = "2.5"
regex = { version = "1.10", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"
